Some of Tonys suggestions
filling in the PCA and admixture info to bulk up the chapter a little

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -53,7 +53,7 @@ This chapter investigates the idea that populations with shared ancestry will di
 - explain east/west split
 -->
 
-The history of Polynesian migration starts with migration out of Africa (50-100 kya, @Nielsen2017), tracking up to the Levant and Arabian peninsula (45-55 kya) and splitting into South Asia, Indonesia, and Australia (50kya,  @Kivisild1999; @Quintana-Murci1999). Concurrently the migration  to Europe was occurring (45 kya). From South Asia the migration continued with the peopling of East Asia (20kya, @Groucutt2015). <!--Lisa: The Pacific – or if you really are talking about Remote Oceania, you are talking about Lapita, which first appears in Near Oceania about 3300BP where they interact with the peoples who have been there for at least 40,000 years and then by 3,000 they are the first to establish settlement on the islands of New Caledonia, Vanuatu, Fiji, Samoa and Tonga. THEN around 1-1.2 kya we have the settlement of the rest of the Polynesian triangle, including the Cook Is avout 1,000 BP and New Zealand about 750 - 800 BP. --> The Pacific was settled in two events, the first was the settlement of Near Oceania (40 kya) followed by the settlement of Remote Oceania, reaching Western Polynesia (Samoa and Tonga) during the Lapita expansion (3 kya, @Matisoo-Smith2015; @Skoglund2016). Eastern Polynesia (including the Cook Islands) was then settled (1–1.2 kya, @Wilmshurst2011). The final region of the Polynesian triangle to be settled was that of \gls{nz} by \gls{nz} M\tex{\={a}}ori, occurring 800 ya [@Duggan2014; @Matisoo-Smith2015].
+The history of Polynesian migration starts with migration out of Africa (50-100 kya, @Nielsen2017), tracking up to the Levant and Arabian peninsula (45-55 kya) and splitting into South Asia, Indonesia, and Australia (50kya,  @Kivisild1999; @Quintana-Murci1999). Concurrently the migration  to Europe was occurring (45 kya). From South Asia the migration continued with the peopling of East Asia (20kya, @Groucutt2015). <!--Lisa: The Pacific – or if you really are talking about Remote Oceania, you are talking about Lapita, which first appears in Near Oceania about 3300BP where they interact with the peoples who have been there for at least 40,000 years and then by 3,000 they are the first to establish settlement on the islands of New Caledonia, Vanuatu, Fiji, Samoa and Tonga. THEN around 1-1.2 kya we have the settlement of the rest of the Polynesian triangle, including the Cook Is avout 1,000 BP and New Zealand about 750 - 800 BP. --> The Pacific was settled in two events, the first was the settlement of Near Oceania (40 kya), this was followed by the settlement of Remote Oceania, reaching Western Polynesia (Samoa and Tonga) during the Lapita expansion (3 kya, @Matisoo-Smith2015; @Skoglund2016). Eastern Polynesia (including the Cook Islands) was then settled (1–1.2 kya, @Wilmshurst2011). The final region of the Polynesian triangle to be settled was that of \gls{nz} by \gls{nz} M\tex{\={a}}ori, occurring 800 ya [@Duggan2014; @Matisoo-Smith2015]. It is from this migration history that modern Polynesian populations come to have a shared common ancestry with modern East Asian populations.
 
 <!--
 need something about what consitutes east and west polynesia and why that matters - doone in above and following paras
@@ -70,9 +70,9 @@ include paragraph about maori and pacific health in general in new zealand - don
 
 -->
 
-New Zealand M\tex{\={a}}ori and Pacific Islanders in New Zealand over the past decade have been exhibiting a decrease in overall health [@MinistryofHealth2016]. Fruit and vegetable intake, and physical activity has also been reported as decreasing, all the while there has been an increase in obesity, which has an adjusted rate ratio of 1.7 for  M\tex{\={a}}ori vs non- M\tex{\={a}}ori, and 2.4 for Pacific vs non-Pacific [@MinistryofHealth2016]. The rate of increase in \gls{bmi} for Pacific Islanders was five times that of the rest of the world, and fasting plasma glucose was three to four times higher over the 1980-2008 period [@Hawley2015]. The health disparities are captured in the New Zealand statistics where M\tex{\={a}}ori have a mortality rate of 1.8  that of non-M\tex{\={a}}ori, with the rates of obesity and diabetes of particular note, with the M\tex{\={a}}ori standardised rate of 40.6 per 100,000, five times higher than non-M\tex{\={a}}ori of 8.1 per 100,000 [@MinistryofHealth2012].
+New Zealand M\tex{\={a}}ori and Pacific Islanders in New Zealand over the past decade have been exhibiting a decrease in overall health [@MinistryofHealth2016]. Fruit and vegetable intake, and physical activity has also been reported as decreasing, all the while there has been an increase in obesity, which has an adjusted rate ratio of 1.7 for  M\tex{\={a}}ori versus non- M\tex{\={a}}ori, and 2.4 for Pacific versus non-Pacific [@MinistryofHealth2016]. The rate of increase in \gls{bmi} for Pacific Islanders was five times that of the rest of the world, and fasting plasma glucose was three to four times higher over the 1980-2008 period [@Hawley2015]. The health disparities are captured in the New Zealand statistics where M\tex{\={a}}ori have a mortality rate of 1.8  that of non-M\tex{\={a}}ori, with the rates of obesity and diabetes of particular note, with the M\tex{\={a}}ori standardised rate of 40.6 per 100,000, five times higher than non-M\tex{\={a}}ori of 8.1 per 100,000 [@MinistryofHealth2012].
 
-New Zealand Polynesians have inherent elevated serum urate levels and higher prevalence of gout [@Winnard2012; @Winnard2013]. Polynesian populations share a common genetic ancestry with East Asia, however, there are variants in Polynesian populations associated with increased risk to gout and elevated serum urate [@Phipps-Green2010; @Hollis-Moffatt2012]. Serum urate has been associated with metabolic disorders [@Choi2007;@Choi2007b] and genes involved with complex diseases such as \gls{t2d}, gout, and other metabolic related disorders, have shown evidence for selection [@Zhang2013a; @pickrell2009signals;@Hancock2008]. 
+New Zealand Polynesians have inherent elevated serum urate levels and higher prevalence of gout [@Winnard2012; @Winnard2013] and there are genetic variants in Polynesian populations associated with increased risk to gout and elevated serum urate [@Phipps-Green2010; @Hollis-Moffatt2012]. Serum urate has been associated with metabolic disorders [@Choi2007;@Choi2007b] and genes involved with complex diseases such as \gls{t2d}, gout, and other metabolic related disorders, have shown evidence for selection [@Zhang2013a; @pickrell2009signals;@Hancock2008]. 
 
 It is hypothesised that elevated serum urate may have undergone positive selection in Polynesian populations due to some of the beneficial properties [@Gosling2014], such as its role as a powerful anti-oxidant [@Ames1981], or as an adjuvant for the innate immune system [@Opitz2009]. Serum urate has also been suggested to have a protective neurological effect against dementia, and provides improved cognitive function with age [@Euser2009]. Characterisation of selection within Polynesian populations has been largely limited to population differentiation due to population sample sizes [@Kimura2008; @Mallick2016].
 
@@ -91,6 +91,18 @@ Here I investigate genetic selection of serum urate and related co-morbidities i
 <!--
 Important distinction is that this used the 1% threshold NOT the 1% and >/< 0 to select the windows to be used
 -->
+
+### Data
+
+The dataset used in this chapter is the selection dataset consisting of 31 population groups, split into six super populations, created from marker matching the Polynesian populations genotyped on the CoreExome \gls{snp} array, with the \gls{1kgp} Phase 3 dataset (section \@ref(selectionDataset)).
+
+### Principal components analysis
+
+\Glsdesc{pca} was performed on the independent genetic markers from the selection dataset (for more detail refer section \@ref(pca)). The first 10 components were calculated and plotted.   
+
+### Admixture analysis
+
+Admixture analysis was performed on the independent genetic markers for the selection dataset. 
 
 ### Frequency spectrum
 
@@ -1321,7 +1333,7 @@ To assess if there was specificity of selection for the metabolic disease gene l
 
 Overall, gene lists derived from \gls{gwas} associations clustered the individual populations into their super population groupings. Windows that intersected genes that had been associated with a disease were centred by population median and then grouped using hierarchical clustering. There were varying levels of super population proportions and exclusivity (the proportion of super populations in a single cluster) of clusters (Table \@ref(tab:proportion) and \@ref(tab:exclusivity)). The Polynesian populations clustered together when using each of \gls{fwh}, \gls{td}, and \gls{ze}, and in the majority of clustering (17/20) they were exclusive. This pattern was also similar with the \gls{eas} populations (17/20). For the clusters that contained the entirety of a super population, half the groupings for the entire Polynesian super population were exclusive. Three quarters of the groupings for each of the AFR and EAS super populations were exclusive and grouped the super population in their entirety. This suggests that singletons or rare variants are insufficient in these genes to be able to differentiate between populations compared to the statistics that use the more common variants. 
 
-Comparing the gene lists by statistic, for all selection statistics and gene lists the populations of the \gls{sas} super population were all clustered together, although often with poor exclusivity. The \gls{eur} super population was clustered entirely together but with a ranging degree of exclusivity across the different selection test statistics. \Gls{td}, \gls{fwh}, and \gls{ze} clustered all the super populations in their entirety although the \gls{amr} populations were split. The clustering of super populations was not specific to the gene lists associated with urate, gout, obesity, \gls{t2d}, kidney disease, or, metabolic syndrome, as the use of random lists of genes would cluster the super populations (excluding \gls{amr}) up to 75% of the time (Table \@ref(tab:randgenes)). This indicates that there is likely nothing specific about the urate and gout, \gls{t2d}, obesity, kidney disease, or metabolic syndrome gene lists in terms of "signatures of selection", but they contain similar discriminatory information as other lists of genes, which is likely to be capturing allele frequency differences between populations. This is seen with the results of the clustering using random genes (Section \@ref(randomgenes)), where the number of genes in a gene list has appears to be impactful on exclusivity and proportion of populations clustered into their super populations.
+Comparing the gene lists by statistic, for all selection statistics and gene lists the populations of the \gls{sas} super population were all clustered together, although often with poor exclusivity. The \gls{eur} super population was clustered entirely together but with a ranging degree of exclusivity across the different selection test statistics. \Gls{td}, \gls{fwh}, and \gls{ze} clustered all the super populations in their entirety although the \gls{amr} populations were split. The clustering of super populations was not specific to the gene lists associated with urate, gout, obesity, \gls{t2d}, kidney disease, or, metabolic syndrome, as the use of random lists of genes would cluster the super populations (excluding \gls{amr}) up to 75% of the time (Table \@ref(tab:randgenes)). This indicates that there is likely nothing specific about the urate and gout, \gls{t2d}, obesity, kidney disease, or metabolic syndrome gene lists in terms of "signatures of selection", but they contain similar discriminatory information as other lists of genes, which is likely to be capturing allele frequency differences between populations. This is seen with the results of the clustering using random genes (Section \@ref(randomgenes)), where the number of genes in a gene list has appears to impact on exclusivity and proportion of populations clustered into their super populations.
 
 
 <!--
@@ -2052,7 +2064,7 @@ The simplest explanation of why similar clustering occurred with the gene lists 
 
 #### Clustering of extreme value windows
 
-The differences in the extremes of the distributions for the site-frequency spectrum statistics showed that they could be used to cluster the populations into their super populations. The differences and commonalities in the genes that had evidence of association with a metabolic disease, in the 1^st^ percentiles of the statistics for the Polynesian populations, were relatively isolated to only the Polynesian populations. The 1^st^ percentile represents the values with the highest liklihood of being under selection. The windows that were in common with other populations were, for the most part, only found in the populations of \gls{eas}. The windows or \glspl{snp} that were significant in the Polynesian populations within the metabolic disease gene lists were usually limited to commonality with the paired ancestrally similar population (\gls{cim} and \gls{nzm}, or \gls{sam} and \gls{ton}). Windows were more likely to be in common between populations for the 99^th^ percentiles where this represented an increase in high frequency variants.
+The differences in the extremes of the distributions for the site-frequency spectrum statistics showed that they could be used to cluster the populations into their super populations. The differences and commonalities in the genes that had evidence of association with a metabolic disease, in the 1^st^ percentiles of the statistics for the Polynesian populations, were relatively isolated to only the Polynesian populations. The 1^st^ percentile represents the values with the highest likelihood of being under selection. The windows that were in common with other populations were, for the most part, only found in the populations of \gls{eas}. The windows or \glspl{snp} that were significant in the Polynesian populations within the metabolic disease gene lists were usually limited to commonality with the paired ancestrally similar population (\gls{cim} and \gls{nzm}, or \gls{sam} and \gls{ton}). Windows were more likely to be in common between populations for the 99^th^ percentiles where this represented an increase in high frequency variants.
 
 #### Clustering of haplotype-based statistics
 
