included a calculation for the combined P value between selection and gwas
use ncbi to annotate the snps, gives a few more gene names

polishing up the discussion

--- a/references.bib
+++ b/references.bib
@@ -4067,3 +4067,153 @@ title = {{Multiple genetic loci influence serum urate levels and their relations
 volume = {3},
 year = {2010}
 }
+
+@article{Chhana2011,
+abstract = {Bone erosion is a common manifestation of chronic tophaceous gout.},
+author = {Chhana, Ashika and Callon, Karen E. and Pool, Bregina and Naot, Dorit and Watson, Maureen and Gamble, Greg D. and McQueen, Fiona M. and Cornish, Jillian and Dalbeth, Nicola},
+doi = {10.1136/ard.2010.144774},
+file = {:home/murraycadzow/Dropbox/Papers/1684.full.pdf:pdf},
+isbn = {1468-2060 (Electronic)$\backslash$r0003-4967 (Linking)},
+issn = {00034967},
+journal = {Annals of the Rheumatic Diseases},
+number = {9},
+pages = {1684--1691},
+pmid = {21622970},
+title = {{Monosodium urate monohydrate crystals inhibit osteoblast viability and function: Implications for development of bone erosion in gout}},
+volume = {70},
+year = {2011}
+}
+
+@article{Kerr1993,
+abstract = {We have isolated and partially sequenced the human bone sialoprotein gene (IBSP). IBSP has been sublocalized by in situ hybridization to chromosome 4q28-q31 and is composed of six small exons (51 to 159 bp) and 1 large exon (∼2.6 kb). The intron/exon junctions defined by sequence analysis are of class 0, retaining an intact coding triplet. Sequence analysis of the 5' upstream region revealed a TATAA (nucleotides -30 to -25 from the transcriptional start point) and a CCAAT (nucleotides -56 to -52) box, both in the reverse orientation. Intron 1 contains interesting structural elements composed of polypyrimidine repeats followed by a poly(AC)(n) tract. Both types of structural elements have been detected in promoter regions of other genes and have been implicated in transcriptional regulation. Several differences between the previously published cDNA sequence (L. W. Fisher et al., 1990, J. Biol. Chem. 265, 2347-2351) and our sequence have been identified, most of which are contained within the untranslated exon 1. Three base revisions in the coding region include a G to T (Gly to Val, amino acid 195), T to C (Val to Ala, amino acid 268), and T to A (Glu to Asp, amino acid 270). In conclusion, the genomic organization and potential regulatory elements of human IBSP have been elucidated. {\textcopyright} 1993 Academic Press. All rights reserved.},
+author = {Kerr, Janet M. and Fisher, Larry W. and Termine, John D. and Wang, Mary G. and McBride, O. Wesley and Young, Marian F.},
+doi = {10.1006/geno.1993.1340},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0888754383713406-main.pdf:pdf},
+isbn = {0888-7543 (Print)},
+issn = {08887543},
+journal = {Genomics},
+number = {2},
+pages = {408--415},
+pmid = {8406493},
+title = {{The human bone sialoprotein gene (ibsp): Genomic localization and characterization}},
+volume = {17},
+year = {1993}
+}
+
+@article{Rowe2000,
+abstract = {Oncogenic hypophosphatemic osteomalacia (OHO) is characterized by a renal phosphate leak, hypophosphatemia, low-serum calcitriol (1,25-vitamin- D3), and abnormalities in skeletal mineralization. Resection of OHO tumors results in remission of the symptoms, and there is evidence that a circulating phosphaturic factor plays a role in the bone disease. This paper describes the characterization and cloning of a gene that is a candidate for the tumor-secreted phosphaturic factor. This new gene has been named MEPE (matrix extracellular phosphoglycoprotein) and has major similarities to a group of bone-tooth mineral matrix phospho-glycoproteins (osteopontin (OPN; HGMW-approved symbol SPP1), dentin sialo phosphoprotein (DSPP), dentin matrix protein 1 (DMP1), bone sialoprotein II (IBSP), and bone morphogenetic proteins (BMP). All the proteins including MEPE contain RGD sequence motifs that are proposed to be essential for integrin-receptor interactions. Of further interest is the finding that MEPE, OPN, DSPP, DMP1, IBSP, and BMP3 all map to a defined region in chromosome 4q. Refined mapping localizes MEPE to 4q21.1 between ESTs D4S2785 (WI-6336) and D4S2844 (WI-3770). MEPE is 525 residues in length with a short N-terminal signal peptide. High-level expression of MEPE mRNA occurred in all four OHO tumors screened. Three of 11 non-OHO tumors screened contained trace levels of MEPE expression (detected only after RT-PCR and Southern32P analysis). Normal tissue expression was found in bone marrow and brain with very-low-level expression found in lung, kidney, and human placenta. Evidence is also presented for the tumor secretion of clusterin (HGMW-approved symbol CLU) and its possible role as a cytotoxic factor in one of the OHO patients described. (C) 2000 Academic Press.},
+author = {Rowe, Peter S.N. and {De Zoysa}, Priyal A. and Dong, Rong and Wang, Huei Rong and White, Kenneth E. and Econs, Michael J. and Oudet, Claudine L.},
+doi = {10.1006/geno.2000.6235},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0888754300962359-main.pdf:pdf},
+isbn = {0888-7543 (Print)$\backslash$r0888-7543},
+issn = {08887543},
+journal = {Genomics},
+number = {1},
+pages = {54--68},
+pmid = {10945470},
+title = {{MEPE, a new gene expressed in bone marrow and tumors causing osteomalacia}},
+volume = {67},
+year = {2000}
+}
+
+@article{Mochizuki1996,
+abstract = {A second gene for autosomal dominant polycystic kidney disease was identified by positional cloning. Nonsense mutations in this gene (PKD2) segregated with the disease in three PKD2 families. The predicted 968-amino acid sequence of the PKD2 gene product has six transmembrane spans with intracellular amino- and carboxyl-termini. The PKD2 protein has amino acid similarity with PKD1, the Caenorhabditis elegans homolog of PKD1, and the family of voltage-activated calcium (and sodium) channels, and it contains a potential calcium-binding domain.},
+author = {Mochizuki, T. and Wu, G. and Hayashi, T. and Xenophontos, S. L. and Veldhuisen, B. and Saris, J. J. and Reynolds, D. M. and Cai, Y. and Gabow, P. A. and Pierides, A. and Kimberling, W. J. and Breuning, M. H. and Deltas, C. C. and Peters, D. J. M. and Somlo, S.},
+doi = {10.1126/science.272.5266.1339},
+file = {:home/murraycadzow/Dropbox/Papers/1339.full.pdf:pdf},
+isbn = {0036-8075 (Print)},
+issn = {0036-8075},
+journal = {Science},
+number = {5266},
+pages = {1339--1342},
+pmid = {8650545},
+title = {{PKD2, a Gene for Polycystic Kidney Disease That Encodes an Integral Membrane Protein}},
+url = {http://www.sciencemag.org/cgi/doi/10.1126/science.272.5266.1339},
+volume = {272},
+year = {1996}
+}
+
+@article{Collins2017,
+abstract = {New Zealand (NZ) is a developed nation situated in the South Pacific Ocean with a diverse geological and climatic character. It was first populated about 800 years ago by its indigenous people, the Maori. Today Maori constitute 15{\%} of the New Zealand population, and other Pacific People 7{\%} compared to 74{\%} New Zealanders of European origin. However, Maori and Pacific people account for 58{\%} of the dialysis population but only 17{\%} of patients with functioning renal transplants.This chapter explores the epidemiology of kidney disease in New Zealand Maori and Pacific people. Evidence is presented regarding the nature and causes of disparities in health and survival, which occur in kidney disease and are paralleled across the whole spectrum of health and disability.Strategies to improve outcomes are being established and promoted at the clinical level. However, more focus is required on improving the way that individuals and society through its many agencies, systems, and agendas act toward Maori and Pacific people.},
+author = {Collins, John F. and Tutone, Viliame and Walker, Curtis},
+doi = {10.1016/B978-0-12-804311-0.00017-0},
+file = {:home/murraycadzow/Dropbox/Papers/1289{\_}cn74s061.pdf:pdf},
+isbn = {9780128043820},
+issn = {0301-0430},
+journal = {Chronic Kidney Disease in Disadvantaged Populations},
+keywords = {CKD,Dialysis,Disparity,ESKD,Kidney,Maori,New Zealand,Pacific people,Transplantation},
+pages = {157--166},
+pmid = {20979966},
+title = {{Kidney Disease in Maori and Pacific people in New Zealand}},
+volume = {74},
+year = {2017}
+}
+
+@article{Field2016a,
+author = {Field, Yair and Boyle, Evan A and Telis, Natalie and Gao, Ziyue and Gaulton, Kyle J and Golan, David and Yengo, Loic and Rocheleau, Ghislain and Froguel, Philippe and McCarthy, Mark I. and Pritchard, Jonathan K},
+doi = {10.1126/science.aag0776},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Field et al. - 2016 - Detection of human adaptation during the past 2000 years.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Field et al. - 2016 - Detection of human adaptation during the past 2000 years(2).pdf:pdf},
+issn = {0036-8075},
+journal = {Science},
+month = {nov},
+number = {6313},
+pages = {760--764},
+title = {{Detection of human adaptation during the past 2000 years}},
+url = {http://www.sciencemag.org/lookup/doi/10.1126/science.aag0776},
+volume = {354},
+year = {2016}
+}
+
+@book{Collins2017book,
+abstract = {New Zealand (NZ) is a developed nation situated in the South Pacific Ocean with a diverse geological and climatic character. It was first populated about 800 years ago by its indigenous people, the Maori. Today Maori constitute 15{\%} of the New Zealand population, and other Pacific People 7{\%} compared to 74{\%} New Zealanders of European origin. However, Maori and Pacific people account for 58{\%} of the dialysis population but only 17{\%} of patients with functioning renal transplants.This chapter explores the epidemiology of kidney disease in New Zealand Maori and Pacific people. Evidence is presented regarding the nature and causes of disparities in health and survival, which occur in kidney disease and are paralleled across the whole spectrum of health and disability.Strategies to improve outcomes are being established and promoted at the clinical level. However, more focus is required on improving the way that individuals and society through its many agencies, systems, and agendas act toward Maori and Pacific people.},
+author = {Collins, John F. and Tutone, Viliame and Walker, Curtis},
+booktitle = {Chronic Kidney Disease in Disadvantaged Populations},
+doi = {10.1016/B978-0-12-804311-0.00017-0},
+file = {:home/murraycadzow/Dropbox/Papers/3-s2.0-B9780128043110000170-main.pdf:pdf},
+isbn = {9780128043820},
+issn = {0301-0430},
+keywords = {CKD,Dialysis,Disparity,ESKD,Kidney,Maori,New Zealand,Pacific people,Transplantation},
+pages = {157--166},
+pmid = {20979966},
+publisher = {Elsevier Inc.},
+title = {{Kidney Disease in Maori and Pacific people in New Zealand}},
+url = {http://dx.doi.org/10.1016/B978-0-12-804311-0/00017-0},
+year = {2017}
+}
+@article{Hildebrandt2010,
+abstract = {Knowledge of the primary cause of a disease is essential for elucidation of its mechanisms, and for adequate classification, prognosis, and treatment. Recently, the causes of many kidney diseases have been shown to be single-gene defects-eg, steroid-resistant nephrotic syndrome, which is caused by podocin mutations in about 25{\%} of children and nearly 15{\%} of adults with the disease. Knowledge of a disease-causing mutation in a single-gene disorder represents one of the most robust diagnostic examples of personalised medicine because the mutation conveys an almost 100{\%} risk of developing the disease by a defined age. Whereas single-gene diseases are rare disorders, polygenic risk alleles arise in common adult-onset diseases. In this Review, I will discuss prominent renal single-gene kidney disorders, and polygenic risk alleles of common disorders. I delineate how emerging techniques of total exome capture and large-scale sequencing will assist molecular genetic diagnosis, prognosis, and specific treatment, and lead to an improved elucidation of disease mechanisms, thus enabling development of new targeted drugs. {\textcopyright} 2010 Elsevier Ltd. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
+author = {Hildebrandt, Friedhelm},
+doi = {10.1016/S0140-6736(10)60236-X},
+eprint = {NIHMS150003},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S014067361060236X-main.pdf:pdf},
+isbn = {1474-547X (Electronic)$\backslash$r0140-6736 (Linking)},
+issn = {01406736},
+journal = {The Lancet},
+number = {9722},
+pages = {1287--1295},
+pmid = {20382325},
+publisher = {Elsevier Ltd},
+title = {{Genetic kidney diseases}},
+url = {http://dx.doi.org/10.1016/S0140-6736(10)60236-X},
+volume = {375},
+year = {2010}
+}
+
+@article{Howie2011,
+abstract = {Genotype imputation is a statistical technique that is often used to increase the power and resolution of genetic association studies. Imputation methods work by using haplotype patterns in a reference panel to predict unobserved genotypes in a study dataset, and a number of approaches have been proposed for choosing subsets of reference haplotypes that will maximize accuracy in a given study population. These panel selection strategies become harder to apply and interpret as sequencing efforts like the 1000 Genomes Project produce larger and more diverse reference sets, which led us to develop an alternative framework. Our approach is built around a new approximation that uses local sequence similarity to choose a custom reference panel for each study haplotype in each region of the genome. This approximation makes it computationally efficient to use all available reference haplotypes, which allows us to bypass the panel selection step and to improve accuracy at low-frequency variants by capturing unexpected allele sharing among populations. Using data from HapMap 3, we show that our framework produces accurate results in a wide range of human populations. We also use data from the Malaria Genetic Epidemiology Network (MalariaGEN) to provide recommendations for imputation-based studies in Africa. We demonstrate that our approximation improves efficiency in large, sequence-based reference panels, and we discuss general computational strategies for modern reference datasets. Genome-wide association studies will soon be able to harness the power of thousands of reference genomes, and our work provides a practical way for investigators to use this rich information. New methodology from this study is implemented in the IMPUTE2 software package.},
+author = {Howie, Bryan and Marchini, Jonathan and Stephens, Matthew},
+doi = {10.1534/g3.111.001198},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Howie, Marchini, Stephens - 2011 - Genotype imputation with thousands of genomes.pdf:pdf},
+issn = {2160-1836},
+journal = {G3 (Bethesda, Md.)},
+month = {nov},
+number = {6},
+pages = {457--70},
+pmid = {22384356},
+title = {{Genotype imputation with thousands of genomes.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3276165{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {1},
+year = {2011}
+}
